--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@heroicons/react": "^2.0.18",
     "autoprefixer": "10.4.14",
     "eslint-config-next": "13.4.12",
+    "heroicons": "^2.0.18",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
