--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "heroicons": "^2.0.18",
     "lodash": "^4.17.21",
     "next": "13.4.12",
+    "next-range-slider": "^1.0.5",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
